# bigsoup

./: .gitignore  CLAUDE.md  Cargo.toml  DEPTH_CHART_PROMPT.md  DESIGN_CHOICES.md  HANDOFF.md  LICENSE  LOB_PERFORMANCE.md  PROMPT_interactive_lob_timeline.md  README.md  STREAM_COMPACTION.md  TICK_LOB_REWRITE.md  pyproject.toml
crates/lod/: corporate_data_formats.md  dividend_extraction_guide.md  split_adjusted_data_plan.md  stock_split_adjustment_guide.md
crates/lod/examples/: auto_splits_example.rs  load_dividends.rs
crates/lod/src/: aggregator.rs  levels.rs  line_lod.rs  mmap.rs  nohlcv_decoder.rs  ntrd_decoder.rs  ntrd_mmap.rs  splits.rs  window.rs
crates/lod/src/live/: mod.rs  simulator.rs
crates/lod/tests/: integration_test.rs  nohlcv_test.rs  real_data_test.rs  test_viz_adapter.rs
crates/lod_deprecated/: Cargo.toml  README.md  test_ntrd.rs
crates/lod_deprecated/examples/: splits_comparison.rs
crates/lod_deprecated/src/: bench.rs  lib.rs  loader.rs  nbbo_decoder.rs  nbbo_mmap.rs  nohlcv_mmap.rs  traits.rs  viz_adapter.rs
crates/lod_deprecated/src/live/: mod.rs  simulator.rs
crates/lod_deprecated/tests/: mmap_test.rs  test_loader.rs
crates/vizza/: Cargo.toml  EMBEDDING_IN_IBKR_PROTO.md
crates/vizza/examples/: compress_test.rs  databento_live_adapted.rs  ema_line_overlay.rs  ibkr_live_example.rs  plot_builder_demo.rs  test_backfill.rs  test_basic.rs  today_so_far_chart.rs
crates/vizza/src/: app.rs  config.rs  depth_renderer.rs  depth_snapshot.rs  depth_timeline.rs  depth_timeline_renderer.rs  depth_timeline_window.rs  depth_window.rs  event.rs  lib.rs  live_view.rs  loader.rs  main.rs  plot_builder.rs  renderer.rs  state.rs  zoom.rs
crates/vizza/src/live/: ipc_source.rs  mock_backfill.rs  synthetic_source.rs
crates/vizza/src/shaders/: bar.wgsl  depth_timeline.wgsl  grid.wgsl  live_marker.wgsl  position_overlay.wgsl
crates/vizza/src/state/: position_overlay.rs  price_level_quad.rs  viewport_state.rs
crates/vizza/src/view/: mod.rs  position_overlay.rs  viewport.rs  viewport_view.rs
crates/vizza_deprecated/: LIVE_DATA_API.md
crates/vizza_deprecated/examples/: ema_line_overlay.rs  ibkr_live_adapted.rs  in_memory_sine_wave.rs  live_data_showcase.rs  live_only_chart.rs  portfolio_viewer.rs  price_level_quads_demo.rs  three_in_one.rs  today_so_far_synthetic_demo.rs
crates/vizza_deprecated/src/: app.rs  depth_timeline.rs  live_view.rs  price_spacing.rs  renderer.rs  state.rs  time_spacing.rs
crates/vizza_deprecated/src/live/: backfill.rs  market_calendar.rs  mock_backfill_implementation.rs  mod.rs  synthetic_source.rs
crates/vizza_deprecated/src/shaders/: border.wgsl  depth_bar.wgsl  depth_timeline.wgsl  line_overlay.wgsl  price_level_quad.wgsl  tooltip.wgsl  viewport_bg.wgsl
crates/vizza_deprecated/src/state/: line_overlay.rs  viewport_state.rs
crates/vizza_deprecated/tests/: compress_test.rs  refactor_safety_tests.rs
kernels/: classify.cu  compact.cu  decide.cu  decide_template.cu
python/econsim/: __init__.py  config.py  dsl.py  runner.py
src/: archetypes.rs  lib.rs  main.rs  sim.rs
src/agent/: state.rs
src/engine/: cpu_engine.rs  cuda_engine.rs  mod.rs
src/market/: lob.rs  mod.rs  order_book.rs  types.rs
tests/: test_smoke.rs
(+6 files in other folders)
