[package]
name = "econsim"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "econsim"
path = "src/main.rs"

[[bin]]
name = "chart"
path = "src/bin/chart.rs"

[lib]
name = "econsim"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.9"
vizza = { path = "crates/vizza" }
lod = { path = "crates/lod" }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
cudarc = { version = "0.16", features = ["cuda-12040"] }
pyo3 = { version = "0.22", features = ["extension-module"] }
numpy = "0.22"
ordered-float = "4"
smallvec = "1"
rustc-hash = "2.1.1"

[build-dependencies]
pyo3-build-config = "0.22"
